nav-bar praticamente finalizada, falta o menu icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,19 @@
+<!--
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <title></title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://kit.fontawesome.com/22042c8e29.js" crossorigin="anonymous"></script>
+
+    </head>
+    <body>
+      <app-nav-bar></app-nav-bar>
+    </body>
+</html>
+-->
+
 <app-nav-bar></app-nav-bar>
+
 <!-- <p>{{ title }} app is running!</p> -->
