--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,40 +2,32 @@
     Imagem e links de acesso
 -->
 <section class="nav">
-    
     <section class="nav-top">
-        <img src="../../assets/earth-globe-icon.png" class="icon-nav">
+        <img src="../../assets/earth-globe-icon.png" alt="Icon" class="icon-nav">
 
-        
         <div class="links-acesso">
             <!-- Link de acesso 1 -->
-            <a href="toLoginComponentRoute">Login</a>
-
+            <a href="toLoginComponentRoute" class="links">Login</a>
             <!-- Link de acesso 2 -->
-            <a href="toLoginComponentRoute">Sign Up</a>
-
+            <a href="toLoginComponentRoute" class="links">Sign Up</a>
             <!-- Link de acesso 3 -->
-            <a href="toHomePageComponent">Home</a>
-
+            <a href="toHomePageComponent" class="links">Home</a>
             <!-- Link de acesso 4 -->
-            <a href="https://github.com/ggborges/">Meu Git</a>
+            <a href="https://github.com/ggborges/" class="links">Meu Git</a>
         </div>
-
     </section>
 
     <section class="nav-bottom">
         <!-- Primeira parte da seção -->
         <div class="icon-and-title">
-            <section>
-                <!-- icon -->
+            <section class="icon">
+                <fa-icon [icon]="['fas', 'bell']"></fa-icon>
             </section>
             <section class="title">
                 <h2 class="title-header">Escolas Pelo Mundo</h2>
                 <p class="subtitle-header">Internacionalizando sonhos</p>    
             </section>
-            
-        </div>
-        
+        </div> 
         <!-- Campo de pesquisa  -->
         <div>
             <input type="text" name="campo-pesquisa" value="O que você procura?">
