login-page component adicionado e rotas na nav-bar

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -7,9 +7,9 @@
 
         <div class="links-acesso">
             <!-- Link de acesso 1 -->
-            <a href="toLoginComponentRoute" class="links">Login</a>
+            <a [routerLink]="['']" class="links">Login</a>
             <!-- Link de acesso 2 -->
-            <a href="toLoginComponentRoute" class="links">Sign Up</a>
+            <a [routerLink]="['/singup']" class="links">Sign Up</a>
             <!-- Link de acesso 3 -->
             <a href="toHomePageComponent" class="links">Home</a>
             <!-- Link de acesso 4 -->
