desenvolvimento do login-page component

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -3,7 +3,7 @@
 
 <section class="login-area">
     <!-- Imagem -->
-    <div>
+    <div class="image">
         <img src="../../assets/earth-globe-icon.png" alt="icon-login">
     </div>    
     <!-- Caixa de Log In -->
@@ -15,12 +15,17 @@
             <input type="text" name="user-name" value="Digite o seu nome de usuário">    
         </section>
         
-        <section class="password-fiel">
+        <section class="password-field">
             <p class="password">Senha</p>
             <div>
                 <input type="text" name="pass-user" value="Digite a sua senha atual">
             </div>
             <a href="" class="forget-pass">Esqueci minha senha</a>    
+        </section>
+        
+        <section class="btns">
+            <button type="" class="btn-signup">Cadastre-se</button>
+            <button type="" class="btn-continue">Continuar</button>    
         </section>
         
     </div>
