signup-page component criado e ajustes nas rotas para signup

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -24,7 +24,7 @@
         </section>
         
         <section class="btns">
-            <button type="" class="btn-signup">Cadastre-se</button>
+            <button type="button" [routerLink]="['/signup']" class="btn-signup">Cadastre-se</button>
             <button type="" class="btn-continue">Continuar</button>    
         </section>
         
