--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
             <!-- Link de acesso 1 -->
             <a [routerLink]="['']" class="links">Login</a>
             <!-- Link de acesso 2 -->
-            <a [routerLink]="['/singup']" class="links">Sign Up</a>
+            <a [routerLink]="['/signup']" class="links">Sign Up</a>
             <!-- Link de acesso 3 -->
             <a href="toHomePageComponent" class="links">Home</a>
             <!-- Link de acesso 4 -->
