--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -58,6 +58,12 @@ h1 {
             display: flex;
             flex-direction: column;
 
+            a {
+                font-family: 'RawlineRegular';
+                font-style: normal;
+                font-size: 14px;
+            }
+
             .password {
                 font-size: 14px;
             }
