ajuste em login-page

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -4,7 +4,7 @@
 <section class="login-area">
     <!-- Imagem -->
     <div class="image">
-        <img src="../../assets/earth-globe-icon.png" alt="icon-login">
+        <img src="../../assets/earth-globe-icon.png" alt="icon-login" class="image">
     </div>    
     <!-- Caixa de Log In -->
     <form [formGroup]="loginForm" class="form-login">
