--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -23,8 +23,10 @@ h1 {
     
 
     .image {
-        padding-left: 5%;
-        padding-top: 3%;
+        padding-left: 8%;
+        padding-top: 1%;
+        width: 60%;
+        height: 60%;
     }
 
     .form-login {
