--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
             <!-- Link de acesso 3 -->
             <a href="toHomePageComponent" class="links">Home</a>
             <!-- Link de acesso 4 -->
-            <a href="https://github.com/ggborges/" class="links">Meu Git</a>
+            <a href="https://github.com/ggborges/" target="_blank" class="links">Meu Git</a>
         </div>
     </section>
 
@@ -31,7 +31,7 @@
         </div> 
         <!-- Campo de pesquisa  -->
         <div>
-            <input type="text" name="campo-pesquisa" value="O que você procura?">
+            <input type="text" name="campo-pesquisa" placeholder="O que você procura?">
         </div>
     </section>
 </section>
