footer component adicionado e finalizado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,6 @@
 
 <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
 
 <!-- <p>{{ title }} app is running!</p> -->
