responsive text in signup-page

--- a/src/app/signup-page/signup-page.component.scss
+++ b/src/app/signup-page/signup-page.component.scss
@@ -13,7 +13,7 @@
     font-family: 'RawlineRegular';
     font-style: normal;
     font-weight: 400;
-    font-size: 21px;
+    font-size: 2vw;
 }
 
 label {
