ajuste no texto dos botões do login-page

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -23,8 +23,8 @@
         </section>
         
         <section class="btns">
-            <button type="button" [routerLink]="['/signup']" class="btn-signup"><strong>Cadastre-se</strong></button>
-            <button type="submit" class="btn-continue"><strong>Continuar</strong></button>    
+            <button type="button" [routerLink]="['/signup']" class="btn-signup"><p>Cadastre-se</p></button>
+            <button type="submit" class="btn-continue"><p>Continuar</p></button>    
         </section>
         
     </form>
