--- a/src/app/signup-page/signup-page.component.html
+++ b/src/app/signup-page/signup-page.component.html
@@ -3,47 +3,62 @@
 </div>
 <!-- Forms para SignUp --- formGroup => signupForm -->
 <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="form-signup">
-    <label for="user-name">Nome de usuário</label>
-    <input formControlName="nome" type="text" id="user-name" name="user-name" placeholder="Escolha o seu nome de usuário" required>
+    <section class="field">
+        <label for="user-name">Nome de usuário</label>
+        <input formControlName="nome" type="text" id="user-name" name="user-name" placeholder="Escolha o seu nome de usuário" required>
+    </section>    
 
-    <label for="email">Email</label>
-    <input formControlName="email" type="email" id="email" name="email" placeholder="Digite o seu email" required>
-
-    <label for="confirm-email">Confirme o seu Email</label>
-    <input formControlName="cemail" type="email" id="confirm-email" name="confirm-email" placeholder="Digite novamente o seu email" required>
-
-    <label for="instituicao">Instituição</label>
-    <input formControlName="instituicao" type="text" id="instituicao" name="instituicao" placeholder="Digite o nome da sua instituição" required>
+    <section class="field">
+        <label for="email">Email</label>
+        <input formControlName="email" type="email" id="email" name="email" placeholder="Digite o seu email" required>
+    </section>
+    
+    <section class="field">
+        <label for="confirm-email">Confirme o seu Email</label>
+        <input formControlName="cemail" type="email" id="confirm-email" name="confirm-email" placeholder="Digite novamente o seu email" required>
+    </section>
+    
+    <section class="field">
+        <label for="instituicao">Instituição</label>
+        <input formControlName="instituicao" type="text" id="instituicao" name="instituicao" placeholder="Digite o nome da sua instituição" required>
+    </section>
+    
     <!-- Select para Cargo -->
-    <label for="cargos">Cargo</label>
-    <select id="cargos" formControlName="cargo">
-        <option value="" selected disabled hidden>Selecione...</option>
-        <option value="Estagiário">Estagiário</option>
-        <option value="Júnior">Júnior</option>
-        <option value="Sênior">Sênior</option>
-        <option value="Pleno">Pleno</option>
-    </select>
+    <section class="field">
+        <label for="cargos">Cargo</label>
+        <select id="cargos" formControlName="cargo">
+            <option value="" selected disabled hidden>Selecione...</option>
+            <option value="Estagiário">Estagiário</option>
+            <option value="Júnior">Júnior</option>
+            <option value="Sênior">Sênior</option>
+            <option value="Pleno">Pleno</option>
+        </select>
+    </section>    
 
-    <label for="senha">Senha</label>
-    <input formControlName="senha" type="text" id="senha" placeholder="Escolha uma senha" required>
+    <section class="field">
+        <label for="field">Senha</label>
+        <input formControlName="senha" type="text" id="senha" placeholder="Escolha uma senha" required>
+        <!-- Checkbox "mostrar senha" -->
+        <div class="mostrar-senha-div">
+            <input type="checkbox" id="show-hide-pass" onclick="show_hide()"> 
+            <label for="show-hide-pass">Mostrar senha</label>    
+        </div>
+    </section>
     
-    <div class="mostrar-senha-div">
-        <input type="checkbox" id="show-hide-pass" onclick="show_hide()"> 
-        <label for="show-hide-pass">Mostrar senha</label>    
-    </div>
+    <section class="field">
+        <label for="confirme-senha">Confirme a sua Senha</label>
+        <input formControlName="csenha" type="text" id="confirme-senha" name="confirme-senha" placeholder="Digite novamente a senha escolhida" required>
+    </section>
     
-    <label for="confirme-senha">Confirme a sua Senha</label>
-    <input formControlName="csenha" type="text" id="confirme-senha" name="confirme-senha" placeholder="Digite novamente a senha escolhida" required>
-    
-    <div class="check">
+    <section class="termos-field">
         <input type="checkbox" id="check" name="termos" required>
         <label class="termos" for="check">Aceito o <a href="">Termos de Uso e Política de Privacidade</a></label>    
-    </div>
+    </section>
     
     
-    <div class="btns">
-        <button type="button" (click)="navigate_to_login()" class="cancelar">Cancelar</button>
-        <button type="submit"  class="continuar">Continuar</button>    
-    </div>
+    <section class="btns">
+        <button type="button" (click)="navigate_to_login()" class="btn-cancel"><p>Cancelar</p></button>
+        <button type="submit"  class="btn-continue"><p>Continuar</p></button>    
+    </section>
     
 </form>
