--- a/src/app/signup-page/signup-page.component.scss
+++ b/src/app/signup-page/signup-page.component.scss
@@ -30,6 +30,7 @@ label {
     display: flex;
     flex-direction: column;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    //box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     margin: 5% 25% 5% 25%;
     padding: 2% 4% 3% 4%;
     
