--- a/src/app/signup-page/signup-page.component.html
+++ b/src/app/signup-page/signup-page.component.html
@@ -37,7 +37,7 @@
 
     <section class="field">
         <label for="field">Senha</label>
-        <input formControlName="senha" type="text" id="senha" placeholder="Escolha uma senha" required>
+        <input formControlName="senha" type="password" id="senha" placeholder="Escolha uma senha" required>
         <!-- Checkbox "mostrar senha" -->
         <div class="mostrar-senha-div">
             <input type="checkbox" id="show-hide-pass" onclick="show_hide()"> 
@@ -47,7 +47,7 @@
     
     <section class="field">
         <label for="confirme-senha">Confirme a sua Senha</label>
-        <input formControlName="csenha" type="text" id="confirme-senha" name="confirme-senha" placeholder="Digite novamente a senha escolhida" required>
+        <input formControlName="csenha" type="password" id="confirme-senha" name="confirme-senha" placeholder="Digite novamente a senha escolhida" required>
     </section>
     
     <section class="termos-field">
