--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -18,7 +18,7 @@
         
         <section class="password-field">
             <p class="password">Senha</p>
-            <input formGroupControl="senha" type="text" class="input-pass"name="pass-user" placeholder="Digite a sua senha atual">
+            <input formGroupControl="senha" type="password" class="input-pass"name="pass-user" placeholder="Digite a sua senha atual">
             <a href="" class="forget-pass">Esqueci minha senha</a>    
         </section>
         
