input de pesquisa da nav-bar formatado

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -30,8 +30,8 @@
             </section>
         </div> 
         <!-- Campo de pesquisa  -->
-        <div>
-            <input type="text" name="campo-pesquisa" placeholder="O que você procura?">
+        <div class="search-div">
+            <input type="text" name="campo-pesquisa" class="search" placeholder="O que você procura?">
         </div>
     </section>
 </section>
