--- a/src/app/signup-page/signup-page.component.html
+++ b/src/app/signup-page/signup-page.component.html
@@ -51,7 +51,7 @@
     </section>
     
     <section class="termos-field">
-        <input type="checkbox" id="check" name="termos" required>
+        <input formControlName="termos" type="checkbox" id="check" name="termos" required>
         <label class="termos" for="check">Aceito o <a href="">Termos de Uso e Política de Privacidade</a></label>    
     </section>
     
