--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -23,17 +23,17 @@ h1 {
     
     // Imagem
     .image {
-        padding-left: 8%;
+        padding-left: 6%;
         padding-top: 1%;
-        width: 60%;
-        height: 60%;
+        width: 70%;
+        height: 70%;
     }
     // Forms para login
     .form-login {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        margin: 2% 5% 10% 7%;
+        margin: 2% 5% 10% 0%;
         height: 100%;
         width: 40%;
         padding: 5% 2% 2% 2%;
@@ -43,15 +43,15 @@ h1 {
         //border-left-style: inherit;
         //border-left-color: #7c7c7c;
         // Formatação para os inputs de texto e select
-        input, select{
-            padding: 1.5%;
+        input {
+            padding: 2.5%;
             border-radius: 0.5vw;
             border-width: 2px;
             border-style: ridge;
             font-family: 'RawlineRegular';
             font-style: italic;
         }
-        p {
+        p, label {
             font-family: 'RawlineRegular';
             font-style: normal;
             font-weight: 700;
@@ -66,7 +66,7 @@ h1 {
         .name-field {
             display: flex;
             flex-direction: column;
-            margin-top: 10%;
+            margin-top: 15%;
 
             .user-name {
                 font-size: 14px;
@@ -76,13 +76,14 @@ h1 {
         .password-field {
             display: flex;
             flex-direction: column;
-            margin-top: 5%;
+            margin-top: 10%;
 
             a {
                 font-family: 'RawlineRegular';
                 font-style: normal;
                 font-size: 14px;
                 margin-left: 0.5%;
+                color: #1351B4;
             }
 
             .password {
@@ -94,7 +95,7 @@ h1 {
 
             display: flex;
             justify-content: space-around;
-            margin-top: 5%;
+            margin-top: 10%;
             
             .btn-signup {
                 display: flex;
